package com.otaku.rating.core.anime.model;

public enum CreditRole {
    AUTHOR,
    DIRECTOR,
    MUSIC,
    DESIGN,
    VOICE_ACTOR
}
